fix header profile image misalignment

--- a/client/src/assets/styles/global.scss
+++ b/client/src/assets/styles/global.scss
@@ -63,6 +63,7 @@ textarea:focus {
 }
 
 .headerPicture {
+  margin-top: 3px;
   height: 42px;
   width: 50px;
   display: flex;
